# node_ci

./: .gitignore  .gn  .vpython  BUILD.gn  DEPS  Makefile  README.md
.github/workflows/: main.yml
build_overrides/: build.gni  gtest.gni
examples/: BUILD.gn
examples/express/: BUILD.gn  express.cmx  express.js
examples/lodash/: BUILD.gn  lodash.cmx
examples/simple_server/: BUILD.gn  simple_server.cmx  simple_server.js
examples/tsc/: BUILD.gn  greeter.ts  tsc.cmx
gn/: BUILD.gn
gn/fuchsia/: BUILD.gn
gn/fuchsia/include/: execinfo.h
gn/fuchsia/include/sys/: resource.h
gn/fuchsia/src/: resource.c
gn/node/: BUILD.gn  node.gni  node_component.gni  node_files.gni  v8-node-ci-node.gni
gn/node/meta/: node.cmx  node_cctest.cmx
gn/node/src/inspector/: BUILD.gn
gn/node/test/addons/: BUILD.gn
gn/node/test/js-native-api/: BUILD.gn
gn/node/test/node-api/: BUILD.gn
gn/testing/gmock/: BUILD.gn
gn/testing/gtest/: BUILD.gn
node_tests/: BUILD.gn
tools/: cp_dir.py  generate_config_gypi.py  generate_node_files_json.py  get_landmines.py  gn-gen.py  mirror_removal.py  npm.py  run_with_env.py  setup_vs_toolchain.js  test.py  update_deps.py  whitespace.txt
