# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file is used by the GN meta build system to find the root of the source
# tree and to set startup options. For documentation on the values set in this
# file, run "gn help dotfile" at the command line.

import("//build/dotfile_settings.gni")

# The location of the build configuration file.
buildconfig = "//build/config/BUILDCONFIG.gn"

# These are the targets to check headers for by default. The files in targets
# matching these patterns (see "gn help label_pattern" for format) will have
# their includes checked for proper dependencies when you run either
# "gn check" or "gn gen --check".
check_targets = ["*"]

# These are the list of GN files that run exec_script. This whitelist exists
# to force additional review for new uses of exec_script, which is strongly
# discouraged except for gypi_to_gn calls.
exec_script_whitelist =
  build_dotfile_settings.exec_script_whitelist + [
    "//v8/build_overrides/build.gni",
    "//node/BUILD.gn",
    "//node/node.gni",
    "//node/unofficial.gni",
    "//node/tools/inspector_protocol/BUILD.gn",
    "//node/deps/ada/BUILD.gn",
    "//node/deps/ada/unofficial.gni",
    "//node/deps/llhttp/BUILD.gn",
    "//node/deps/llhttp/unofficial.gni",
    "//node/deps/nghttp2/BUILD.gn",
    "//node/deps/nghttp2/unofficial.gni",
    "//node/deps/simdjson/BUILD.gn",
    "//node/deps/simdjson/unofficial.gni",
    "//node/deps/simdutf/BUILD.gn",
    "//node/deps/simdutf/unofficial.gni",
    "//node/deps/postject/BUILD.gn",
    "//node/deps/postject/unofficial.gni",
    "//node/deps/brotli/BUILD.gn",
    "//node/deps/brotli/unofficial.gni",
    "//node/deps/base64/BUILD.gn",
    "//node/deps/base64/unofficial.gni",
    "//node/deps/ngtcp2/BUILD.gn",
    "//node/deps/ngtcp2/unofficial.gni",
    "//node/deps/uv/BUILD.gn",
    "//node/deps/uv/unofficial.gni",
    "//node/deps/uvwasi/BUILD.gn",
    "//node/deps/uvwasi/unofficial.gni",
    "//node/deps/cares/BUILD.gn",
    "//node/deps/cares/unofficial.gni",
    "//node/deps/googletest/BUILD.gn",
    "//node/deps/googletest/unofficial.gni",
    "//node/deps/openssl/BUILD.gn",
    "//node/deps/openssl/unofficial.gni",
    "//node/deps/histogram/BUILD.gn",
    "//node/deps/histogram/unofficial.gni",
    "//node/src/inspector/BUILD.gn",
    "//node/src/inspector/unofficial.gni",
    "//node_tests/BUILD.gn",
  ]

# The python interpreter to use by default.
script_executable = "vpython3"

default_args = {
  #########################################################
  # Changeable defaults
  # Node.js defaults.
  node_v8_path = "//v8"

  # V8 options.
  v8_embedder_string = "-node.0"

  #########################################################
  # Alternative configuration not supported. Do not change.
  # General build options.
  clang_use_chrome_plugins = false
  treat_warnings_as_errors = false

  # V8 options catering towards Node.js use case.
  v8_expose_symbols = true
  v8_promise_internal_field_count = 1
  v8_use_external_startup_data = false
  v8_enable_javascript_promise_hooks = true
  v8_enable_sandbox = false
  v8_enable_maglev = false
  # TODO(cbruni, v8:12302): Remove once API is migrated
  v8_scriptormodule_legacy_lifetime = true
}
