# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_fuchsia) {
  import("//third_party/fuchsia-sdk/sdk/build/component.gni")
  import("//third_party/fuchsia-sdk/sdk/build/package.gni")

  fuchsia_component("node_cmx") {
    manifest = "//gn/node/meta/node.cmx"
    data_deps = [
      "//node:node",
    ]
  }

  fuchsia_component("node_cctest_cmx") {
    testonly = true
    manifest = "//gn/node/meta/node_cctest.cmx"
    data_deps = [
      "//node:node_cctest",
    ]
  }

  fuchsia_package("node_package") {
    deps = [
      ":node_cmx",
    ]
  }
 
  fuchsia_package("node_cctest_package") {
    testonly = true
    deps = [
      ":node_cctest_cmx",
    ]
  }
}

group("test_all") {
  testonly = true
  
  deps = [
    "//node:node",
    "//node:node_cctest",
  ]
  
  if (!is_win && !is_fuchsia) {
    deps += [
      "//node/test/addons:build",
      "//node/test/node-api:build",
      "//node/test/js-native-api:build",
    ]
  }
}

