# Copyright 2020 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//node/node_component.gni")

node_component("express_cmx") {
  manifest = "express.cmx"
  node_modules = [ "express" ]
  sources = [ "express.js" ]
}

fuchsia_package("express") {
  deps = [ ":express_cmx" ]
}