# Copyright 2020 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//node/node_component.gni")

node_component("lodash_cmx") {
  manifest = "lodash.cmx"
  node_modules = [ "lodash" ]
  sources = [ "lodash.js" ]
}

fuchsia_package("lodash") {
  deps = [ ":lodash_cmx" ]
}