# Copyright 2020 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//node/node_component.gni")

node_component("simple_server_cmx") {
  manifest = "simple_server.cmx"
  sources = [ "simple_server.js" ]
}

fuchsia_package("simple_server") {
  package_name = "simple_server"
  deps = [ ":simple_server_cmx" ]
}