# Copyright 2020 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//node/node_component.gni")

node_component("tsc_cmx") {
  manifest = "tsc.cmx"
  node_modules = [ "typescript" ]
  sources = [ "greeter.ts" ]
}

fuchsia_package("tsc") {
  deps = [ ":tsc_cmx" ]
}