# Copyright 2020 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//node/node.gni")

#TODO(v8:10292): Remove this once Node migrates off the POSIX APIs.
node_dep("fuchsia_xsi") {
  include_dirs = [
    "include",
    "src",
  ]
  sources = [
    "src/resource.c",
  ]
}
